feat(hiring): stance-based negotiation + user-priority hire flow
Replaces the shortlist-based hiring UX with a "Your candidates" panel
where offers are negotiated via per-tick stance derivation. The user
must click Hire to accept an AGREED offer; CPU teams auto-accept their
own AGREED. Applies to both HC and DOS phases.

Behavior:
- candidate_offers.stance (PENDING / RENEGOTIATE / AGREED) is
  recomputed each weekly tick in PreferenceScoringOfferResolver. Score
  >= 0.80 of max composite prefs-score → AGREED; otherwise RENEGOTIATE.
  A walked offer (revision_count >= 3 and still below threshold) is
  REJECTED.
- User priority: when the user's team has an AGREED offer on a
  candidate the resolver does NOT auto-hire — even if a CPU also has
  AGREED. Hire requires an explicit click via HireCandidate.
- CPU teams still auto-hire via the resolver when they reach AGREED
  and the user has no AGREED on the same candidate.
- MakeOffer supports revisions in-place: resubmitting on an existing
  ACTIVE offer overwrites terms, bumps revision_count, and resets
  stance to PENDING. Offers gated server-side by an existing
  non-NOT_INTERESTED interview (UI already enforced this).

UX:
- Shortlist retired across both HC and DOS. The interviews panel is
  renamed "Your candidates" and becomes the single funnel: each row
  shows the right control for its state (Make offer / Revise / Hire /
  nothing). Offer form expands inline in the row.
- StanceEvaluator returns a directional hint (e.g. "Wants higher
  compensation") derived from the worst offer-controllable dimension;
  rendered alongside the RENEGOTIATE badge.
- Pool size bumped from 3× to 5× teams for HC (40 for an 8-team
  league); weekly interview capacity from 3 to 5.

Internal:
- TeamHiringState.shortlist column dropped (migration V10).
  ManageHeadCoachShortlist* code paths deleted.
- New TeamLookup.userTeamIdForLeague so the resolver can detect user
  priority without threading ownerSubject.
- BestFitHiringAutofill rejec